Wyrd ChangeLog
--------------------------------------------------------------------------------

2006-02-04     Implemented the 'cut', 'copy', and 'paste' operations, which
               provide a convenient interface to duplicate or reschedule
               reminders.

2006-02-01     The 'edit_any' command now spawns a selection dialog only
               when the user has multiple reminder files.

2005-11-20     Released 1.2.0.

               Added the 'busy_algorithm' and 'untimed_duration' configuration
               variables, which can be used to set the algorithm for
               determining the "busy" level for each day on the month calendar.
               There are two algorithms to choose from: count number of 
               triggered reminders per day, or count number of hours of
               reminders per day.

               The configuration script now checks for acceptable versions
               of OCaml and Remind.

2005-10-30     Corrected the build script to support parallel make once again.

               Replaced the deprecated "tail -1" syntax in the configure
               script.

2005-10-15     Fixed an off-by-one error in the resize handler, which could
               cause the Wyrd status line to appear on two different lines.

2005-10-02     Fixed a bug that could cause find_next and next_reminder to
               fail.

2005-09-30     Added the configuration variable 'remind_command', which can
               be used to specify the Remind executable.

2005-09-18     The current date and time are now highlighted within the month
               calendar and timed reminders window, according to the color
               values set for 'calendar_today' and 'timed_current'.  (The
               selected date is now highlighted in the calendar window
               according to the 'calendar_selection' setting, rather than
               the 'calendar_today' setting.)
